<randy savage>FIX THAT JUMPY CROPPER OOOOOH YEAHHH! </randy savage>

--- a/public/jcrop/css/jquery.Jcrop.less
+++ b/public/jcrop/css/jquery.Jcrop.less
@@ -163,3 +163,5 @@
 img.jcrop-preview {
   max-width: none;
 }
+
+.jcrop-keymgr {position: absolute !important;}
